# neo-robot

./: .gitignore  DESCRIPTION.md  README.md  pyproject.toml  requirements.txt
.opencode/plans/: implementation-plan.md
ai-agent/: CONTEXT.md
docs/specs/: specs.md
scripts/: create_entrypoint.sh  install_on_neo.sh
src/neo-robot/: __init__.py
src/neo-robot/engine/: __init__.py
src/neo-robot/ui/: __init__.py
src/neo_robot/: __init__.py  __main__.py
src/neo_robot/config/: settings.py
src/neo_robot/engine/: __init__.py  apis.py  execution_result.py  executor.py
src/neo_robot/hardware/: __init__.py  mock_arm.py  robot_arm.py
src/neo_robot/ui/: app.py  app.tcss
src/neo_robot/ui/screens/: main_screen.py
src/neo_robot/ui/widgets/: code_editor.py  console.py  interactive_console.py  toolbar.py
